test/scc/stmt/semantic-errors/044.t
void test()
{
    if (1) continue;
}